<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical"
        tools:context="com.mcdennylucaz.cafejavasuganda.MainActivity">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/meal" />


        </RelativeLayout>

        <!--Body-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/head"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginEnd="@dimen/margin_smaller"
                android:layout_marginRight="@dimen/margin_smaller"
                android:src="@drawable/ic_call_black_48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_tel"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginEnd="@dimen/margin_smaller"
                android:layout_marginRight="@dimen/margin_smaller"
                android:src="@drawable/ic_email_black_48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_email"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_medium"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginEnd="@dimen/margin_smaller"
                android:layout_marginRight="@dimen/margin_smaller"
                android:src="@drawable/ic_room_black_48dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/menu_heading"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_small" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_smaller"
                android:layout_marginRight="@dimen/margin_smaller"
                android:text="@string/drk"
                android:textColor="@color/textcolor" />

            <View
                android:layout_width="2dp"
                android:layout_height="22dp"
                android:background="@color/textcolor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_smaller"
                android:layout_marginRight="@dimen/margin_smaller"
                android:text="@string/brk"
                android:textColor="@color/textcolor" />

            <View
                android:layout_width="2dp"
                android:layout_height="22dp"
                android:background="@color/textcolor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_smaller"
                android:layout_marginRight="@dimen/margin_smaller"
                android:text="@string/dess"
                android:textColor="@color/textcolor" />

            <View
                android:layout_width="2dp"
                android:layout_height="22dp"
                android:background="@color/textcolor" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_smaller"
                android:layout_marginRight="@dimen/margin_smaller"
                android:text="@string/meal"
                android:textColor="@color/textcolor"

                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:orientation="horizontal"
            android:textAlignment="center">

            <ImageView
                android:layout_width="@dimen/textview_height"
                android:layout_height="@dimen/textview_height"
                android:layout_marginEnd="@dimen/padding_medium"
                android:layout_marginRight="@dimen/padding_medium"
                android:src="@drawable/google" />

            <ImageView
                android:layout_width="@dimen/textview_height"
                android:layout_height="@dimen/textview_height"
                android:layout_marginEnd="@dimen/padding_medium"
                android:layout_marginRight="@dimen/padding_medium"
                android:src="@drawable/fb" />

            <ImageView
                android:layout_width="@dimen/textview_height"
                android:layout_height="@dimen/textview_height"
                android:layout_marginEnd="@dimen/padding_medium"
                android:layout_marginRight="@dimen/padding_medium"
                android:src="@drawable/twitter" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>